[metadata]
description-file = README.md

[mypy]
python_version = 3.6
# override flake8-mypy defaults, since we provide (missing) types
platform='freebsd'

# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True
show_error_context=False

ignore_missing_imports=False
follow_imports=True
cache_dir=.mypy_cache

# disallow untyped calls since we provide our own typedefs
disallow_untyped_calls=True

# don't allow just Any thing.
warn_return_any=True

# treat Optional per PEP 484
strict_optional=True

# ensure all execution paths are returning
warn_no_return=True

# lint-style cleanliness for typing needs to be disabled; returns more errors
# than the full run.
warn_redundant_casts=True
warn_unused_ignores=True

# The following are off by default.  Flip them on if you feel
# adventurous.

check_untyped_defs=True
disallow_untyped_defs=True

[tool:pytest]
addopts = -v -x -rs --ignore=setup.py --pep8 --cov-report term-missing --cov=libioc libioc tests
pep8maxlinelength = 80
pep8ignore = * ALL
[aliases]
test=pytest

[build_sphinx]
project = libioc
