[metadata]
name = libioc
version = attr: libioc.__version__
description = A Python library to manage jails with ioc{age,cell}.
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/bsdci/libioc
author = Stefan Grönke
author_email = stefan@gronke.net
python_requires = >=3.6
platforms =
    FreeBSD
license = BSD 2-Clause License
keywords =
    FreeBSD
    jail
    ioc
classifiers =
    License :: OSI Approved :: BSD 2-Clause License
    Operating System :: POSIX :: BSD :: FreeBSD
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	gitpython
	freebsd_sysctl==0.0.7
	jail==0.0.11
tests_require =
    pytest-runner
    pytest
    pytest-cov
    pytest-pep8

[options.package_data]
* = VERSION

[mypy]
python_version = 3.7
# override flake8-mypy defaults, since we provide (missing) types
platform='freebsd'

# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True
show_error_context=False

ignore_missing_imports=False
follow_imports=True
cache_dir=.mypy_cache

# disallow untyped calls since we provide our own typedefs
disallow_untyped_calls=True

# don't allow just Any thing.
warn_return_any=True

# treat Optional per PEP 484
strict_optional=True

# ensure all execution paths are returning
warn_no_return=True

# lint-style cleanliness for typing needs to be disabled; returns more errors
# than the full run.
warn_redundant_casts=True
warn_unused_ignores=True

# The following are off by default.  Flip them on if you feel
# adventurous.

check_untyped_defs=True
disallow_untyped_defs=True

[tool:pytest]
addopts = -v -x -rs --ignore=setup.py --pep8 --cov-report term-missing --no-cov-on-fail --cov=libioc libioc tests
pep8maxlinelength = 80
pep8ignore = * ALL

[aliases]
test=pytest

[build_sphinx]
project = libioc
