[metadata]
description_file = README.md

[flake8]
exclude = .git,.venv,.eggs,.mypy_cache,build,dist,docs,tests,stubs,tools,__init__.py
ignore = E203,E252,W391,D107,A001,A002,A003,A004,D412,D413

[mypy]
python_version = 3.11
platform = freebsd
mypy_path = stubs
show_column_numbers = True
show_error_context = False

ignore_missing_imports = False
follow_imports = normal
cache_dir = .mypy_cache

# disallow untyped calls since we provide our own typedefs
disallow_untyped_calls = True

# don't allow just Any thing.
warn_return_any = True

# treat Optional per PEP 484
strict_optional = True

# ensure all execution paths are returning
warn_no_return = True

warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True

check_untyped_defs = True
disallow_untyped_defs = True

[tool:pytest]
addopts = -v -rs --ignore=setup.py
testpaths = tests

[build_sphinx]
project = libioc
